2007-01-30  Atsushi Enomoto <atsushi@ximian.com>

	* Expression.cs : typo. Close #80669

2007-01-05  Atsushi Enomoto <atsushi@ximian.com>

	* Expression.cs : text() should match whitespace and significant
	  whitespace nodes.

2006-11-10  Atsushi Enomoto <atsushi@ximian.com>

	* XPathNavigator.cs :
	  - ReadSubtree() should reject everything but Element or Root.
	  - InnerXml and OuterXml should not use ReadSubtree() when it is
	    not positioned on an Element or the Root. Thus, implement them
	    in their own ways. Fixed bug #79875.

2006-11-10  Atsushi Enomoto <atsushi@ximian.com>

	* XPathNavigator.cs : InnerXml should allow Text-only content. Fixed
	  bug #79874, when tied to XPathNavigatorReader fix.

2006-04-10  Atsushi Enomoto <atsushi@ximian.com>

	* XPathNavigator.cs : get_OuterXml() returns indented output, without
	  XML declaration.

2006-03-15  Atsushi Enomoto <atsushi@ximian.com>

	* Expression.cs : extracted XPathSortElement, XPathSorters
	  and XPathSorter from CompiledExpression, and split
	  XPathSorters.Sort() into some methods. Those changes are to make
	  them reusable in XslSortEvaluator.

2006-02-26  Atsushi Enomoto <atsushi@ximian.com>

	* Iterator.cs : seems like MS XPathNodeIterator.MoveNext() itself does
	  not handle XsltContext.PreserveWhitespace() unlike ours. It results
	  in not a small performance improvement. (just removed it since it
	  didn't cause any errors in XSLT standalone tests.)

2006-02-21  Atsushi Enomoto <atsushi@ximian.com>

	* Iterator.cs : removed extra field from AxisIterator.

2006-02-14  Atsushi Enomoto <atsushi@ximian.com>

	* Iterator.cs : tiny message fix (thanks to alp).

2006-01-25  Atsushi Enomoto <atsushi@ximian.com>

	* XPathNavigator.cs : fixed IsNode signature found by updated
	  corcompare.

2006-01-11  Atsushi Enomoto <atsushi@ximian.com>

	* Iterator.cs : Nowadays removal of cloning of the argument list
	  in ListIterator is safe. Thanks to Joshua Tauberer for the hint.
