@@ -1,3 +1,7 @@
+2007-11-29  Atsushi Enomoto <atsushi@ximian.com>
+
+	* XPathNavigator.cs : implemented ValueAs().
+
 2007-01-30  Atsushi Enomoto <atsushi@ximian.com>
 
 	* Expression.cs : typo. Close #80669
